--- a/helm/cluster-api/Chart.yaml
+++ b/helm/cluster-api/Chart.yaml
@@ -5,11 +5,5 @@ home: "https://github.com/giantswarm/cluster-api-app"
 version: "[[ .Version ]]"
 appVersion: [[ .AppVersion ]]
 annotations:
-  application.giantswarm.io/owners: |
-    - catalog: default
-      provider: aws
-      team: phoenix
-    - catalog: default
-      provider: azure
-      team: phoenix
+  application.giantswarm.io/team: "hydra"
   config.giantswarm.io/version: 1.x.x
