--- a/helm/cluster-api/values.yaml
+++ b/helm/cluster-api/values.yaml
@@ -8,7 +8,7 @@ images:
     name: giantswarm/kubeadm-bootstrap-controller
   controlplane:
     name: giantswarm/kubeadm-control-plane-controller
-  tag: v1.4.7-gs-7030a8361  # upstream v1.4.7 + https://github.com/kubernetes-sigs/cluster-api/pull/8586 (Makefile improvement)
+  tag: v1.4.7-gs-3fce432d5  # upstream v1.4.7 + https://github.com/kubernetes-sigs/cluster-api/pull/8586 (Makefile improvement) + https://github.com/giantswarm/cluster-api/pull/21 (backport of bootstrap config reference rotation support)
 
 project:
   branch: "[[ .Branch ]]"
