--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,17 @@
 version: 2.1
+
 orbs:
   architect: giantswarm/architect@4.37.0
 
 workflows:
-  package-and-push-chart-on-tag:
+  build:
     jobs:
       - architect/push-to-app-catalog:
-          context: "architect"
-          # executor: "app-build-suite" # uncomment this if you want automatic metadata generation
-          name: push-cluster-api-to-control-plane-catalog
-          app_catalog: "control-plane-catalog"
-          app_catalog_test: "control-plane-test-catalog"
-          chart: "cluster-api"
-          # Trigger job on git tag.
+          name: push-to-control-plane-catalog
+          context: architect
+          chart: cluster-api
+          app_catalog: control-plane-catalog
+          app_catalog_test: control-plane-test-catalog
           filters:
             tags:
-              only: /^v.*/     
+              only: /^v.*/
