--- a/.github/workflows/templates.yaml
+++ b/.github/workflows/templates.yaml
@@ -1,10 +1,11 @@
-name: verify helm manifests are up to date
+name: Templates
 on: pull_request
 jobs:
-  make-verify:
+  verify:
+    name: Verify
     runs-on: ubuntu-latest
     steps:
-      - name: 'checkout'
+      - name: checkout
         uses: actions/checkout@v4
       - name: verify
         run: make verify
