--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -75,24 +75,32 @@ replacements:
 
 patches:
 # CRDs
+- path: patches/crds/all.yaml
+  target:
+    group: apiextensions.k8s.io
+    version: v1
+    kind: CustomResourceDefinition
 - path: patches/crds/core.yaml
   target:
     group: apiextensions.k8s.io
     version: v1
     kind: CustomResourceDefinition
     labelSelector: cluster.x-k8s.io/provider=cluster-api
+    annotationSelector: cert-manager.io/inject-ca-from
 - path: patches/crds/bootstrap.yaml
   target:
     group: apiextensions.k8s.io
     version: v1
     kind: CustomResourceDefinition
     labelSelector: cluster.x-k8s.io/provider=bootstrap-kubeadm
+    annotationSelector: cert-manager.io/inject-ca-from
 - path: patches/crds/controlplane.yaml
   target:
     group: apiextensions.k8s.io
     version: v1
     kind: CustomResourceDefinition
     labelSelector: cluster.x-k8s.io/provider=control-plane-kubeadm
+    annotationSelector: cert-manager.io/inject-ca-from
 
 # Namespaces
 - path: patches/namespaces/capi-system.yaml
