--- a/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-kubeadm-control-plane-manager-role.yaml
+++ b/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-kubeadm-control-plane-manager-role.yaml
@@ -59,6 +59,12 @@ rules:
 - apiGroups:
   - cluster.x-k8s.io
   resources:
+  - machinepools
+  verbs:
+  - list
+- apiGroups:
+  - cluster.x-k8s.io
+  resources:
   - machines
   - machines/status
   verbs:
