--- a/config/helm/patches/crds/all.yaml
+++ b/config/helm/patches/crds/all.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: core
+  name: all
   labels:
     clusterctl.cluster.x-k8s.io: ""
     clusterctl.cluster.x-k8s.io/move: ""
