--- a/.github/workflows/templates.yaml
+++ b/.github/workflows/templates.yaml
@@ -5,7 +5,9 @@ jobs:
     name: Verify
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
-      - name: verify
-        run: make verify
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Generate templates
+      run: make generate
+    - name: Verify templates
+      run: git diff --exit-code
