--- a/helm/cluster-api/templates/monitoring.coreos.com_v1_servicemonitor_capi-controller-manager.yaml
+++ b/helm/cluster-api/templates/monitoring.coreos.com_v1_servicemonitor_capi-controller-manager.yaml
@@ -2,12 +2,15 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
+    app.kubernetes.io/component: cluster-api
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
     app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
+    cluster.x-k8s.io/provider: cluster-api
+    control-plane: controller-manager
     helm.sh/chart: cluster-api
-  name: capi-metrics-servicemonitor
+  name: capi-controller-manager
   namespace: '{{ .Release.Namespace }}'
 spec:
   endpoints:
@@ -15,3 +18,4 @@ spec:
   selector:
     matchLabels:
       cluster.x-k8s.io/provider: cluster-api
+      control-plane: controller-manager
