--- a/helm/cluster-api/templates/monitoring.coreos.com_v1_servicemonitor_capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/helm/cluster-api/templates/monitoring.coreos.com_v1_servicemonitor_capi-kubeadm-bootstrap-controller-manager.yaml
@@ -2,16 +2,20 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
+    app.kubernetes.io/component: bootstrap-kubeadm
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
     app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
+    cluster.x-k8s.io/provider: bootstrap-kubeadm
+    control-plane: controller-manager
     helm.sh/chart: cluster-api
-  name: capi-kubeadm-control-plane-metrics-servicemonitor
+  name: capi-kubeadm-bootstrap-controller-manager
   namespace: '{{ .Release.Namespace }}'
 spec:
   endpoints:
   - port: metrics
   selector:
     matchLabels:
-      cluster.x-k8s.io/provider: control-plane-kubeadm
+      cluster.x-k8s.io/provider: bootstrap-kubeadm
+      control-plane: controller-manager
